KYAN-328 Add lazy loading for all image related components

--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/bloglist/bloglist.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/bloglist/bloglist.html
@@ -22,7 +22,8 @@
       <a href="${item.link}" class="column is-4-desktop article-thumbnail">
         <div class="has-text-centered image-hero">
           <img data-sly-test.heroImage="${item.blogArticleHeader.heroImage}" src="${heroImage}"
-               alt="${item.blogArticleHeader.heroImageAlt}" loading="lazy">
+               alt="${item.blogArticleHeader.heroImageAlt}"
+               loading="${model.loadingMode}" fetchpriority="${model.fetchPriority}">
         </div>
         <div class="content">
           <div class="content-info">
