--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/quote/templates/template-default.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/quote/templates/template-default.html
@@ -29,7 +29,8 @@
           <p class="image is-64x64">
             <img src="${authorPhoto}"
                  alt="${model.authorPhotoAlt}"
-                 class="is-rounded"/>
+                 class="is-rounded"
+                 loading="${model.loadingMode}" fetchpriority="${model.fetchPriority}"/>
           </p>
         </figure>
       </sly>
