--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/card/template.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/card/template.html
@@ -25,7 +25,7 @@
       </sly>
 
       <img src="${model.image.assetReference}" width="${model.image.width}" height="${model.image.height}" alt="${model.image.alt}"
-           loading="${model.loadingMode}" fetchpriority="${model.fetchPriority}"/>
+           loading="${model.image.loadingMode}" fetchpriority="${model.image.fetchPriority}"/>
     </picture>
   </figure>
 </template>
