--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/section/section.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/section/section.html
@@ -33,7 +33,7 @@
       </sly>
 
       <img width="${model.width}" height="${model.height}" class="img-as-bg" src="${model.desktopImage}"
-           alt="${model.alt}" fetchpriority="${model.fetchPriority}">
+           alt="${model.alt}" fetchpriority="${model.fetchPriority}" loading="${model.loadingMode}">
     </picture>
     <sly data-sly-repeat.paragraph="${model.children}"
          data-sly-resource="${paragraph.path @ resourceType=paragraph.resourceType}"></sly>
