KYAN-337 Add option to invert column order for mobile

--- a/applications/common/frontend/src/components/Column/Column.scss
+++ b/applications/common/frontend/src/components/Column/Column.scss
@@ -16,7 +16,16 @@
  * -->
  */
 
+@use 'sass:map';
 @use 'src/atomic-design-system/00-token/t.position' as position;
+@use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
+
+@media (width < map.get(breakpoint.$map_t-breakpoints-px, medium)) {
+  .columns.invert-column-order-mobile {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
 
 .column {
   &.sticky-container {
