KYAN-336 Apply suggestions

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -301,7 +301,7 @@
     }
     
     @media (width < map.get(breakpoint.$map_t-breakpoints-px, large)) {
-      .empty-column {
+      .p-0-below-lg {
         padding: 0;
       }
     }
